--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -937,4 +937,18 @@
   publisher = {The Royal Society},
 }
 
+@Article{Bialaszek2017,
+  author    = {Wojciech Bia{\l}aszek and Przemys{\l}aw Marcowski and Pawe{\l} Ostaszewski},
+  journal   = {{PLOS} {ONE}},
+  title     = {Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models},
+  year      = {2017},
+  month     = {jul},
+  number    = {7},
+  pages     = {e0182353},
+  volume    = {12},
+  doi       = {10.1371/journal.pone.0182353},
+  editor    = {Jean Daunizeau},
+  publisher = {Public Library of Science ({PLoS})},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
