--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -951,4 +951,31 @@
   publisher = {Public Library of Science ({PLoS})},
 }
 
+@Article{KleinFluegge2015,
+  author    = {Miriam C. Klein-Flügge and Steven W. Kennerley and Ana C. Saraiva and Will D. Penny and Sven Bestmann},
+  journal   = {{PLOS} Computational Biology},
+  title     = {Behavioral modeling of human choices reveals dissociable effects of physical effort and temporal delay on reward devaluation},
+  year      = {2015},
+  month     = {mar},
+  number    = {3},
+  pages     = {e1004116},
+  volume    = {11},
+  doi       = {10.1371/journal.pcbi.1004116},
+  editor    = {Gelsy Torres-Oviedo},
+  publisher = {Public Library of Science ({PLoS})},
+}
+
+@Article{Thomson2022,
+  author    = {Keela S. Thomson and Daniel M. Oppenheimer},
+  journal   = {Perspectives on Psychological Science},
+  title     = {The {\textquotedblleft}{E}ffort {E}lephant{\textquotedblright} in the room: {W}hat is effort, anyway?},
+  year      = {2022},
+  month     = {jun},
+  number    = {6},
+  pages     = {1633--1652},
+  volume    = {17},
+  doi       = {10.1177/17456916211064896},
+  publisher = {{SAGE} Publications},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
